[package]
name = "cat-paw"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Leego <i@leego.io>"]
keywords = ["gamedev", "game", "bevy"]
repository = "https://github.com/leego/cat-paw"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d"] }
device_query = "4.0.1"

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
